# TranscendAI

./: .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
Dockerfiles/: phi3_llama_cpp.dockerfile  phi3_ollma.dockerfile
documentation/: api_examples.md  basic_deployment.sh  basic_translation.py  model_deployment.md  model_explanation.md
tests/: test_llama.py  test_logger.py  test_rest_api.py  test_schemas.py  test_translator.py  true_test.py
transcendai/: __main__.py  logger_config.py  main.py  phi3_instruct_model.py  preload_model.py  rest_api.py  schemas.py  translation_logics.py  translation_model.py
