[tool.poetry]
name = "transcendai"
version = "2.0.0"
description = ""
authors = ["pazfro <paz.fromovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.45.2"
torch = "^2.4.1"
python-bidi = "^0.6.3"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pydentic = "^0.0.1.dev3"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
